lava-server (0.22.1-7) unstable; urgency=medium

  * Add sbuild sample script to lava-dev
  * Move creation of superuser into install_database function and check
    if the superuser needs to be created.
  * Update vcs location
  * Drop linaro-django-pagination from lava-server
  * Add lava-dev to the metapackage
  * Add vmdebootstrap to lava metapackage and a README to lava-dev.

 -- Neil Williams <codehelp@debian.org>  Mon, 14 Apr 2014 10:37:27 +0100

lava-server (0.22.1-6) unstable; urgency=medium

  * Drop libguestfs-tools as it has moved to lava-dispatcher to be
    architecture-dependent.

 -- Neil Williams <codehelp@debian.org>  Sat, 29 Mar 2014 22:21:41 +0000

lava-server (0.22.1-5) unstable; urgency=medium

  * Add support for lava-dev - future versions will use git tag version
    strings.
  * Add support for reconfiguring lava-server as a remote worker - ssh
    and xmlrpc support needs to be done manually.
  * Create the superuser after completing migrations

 -- Neil Williams <codehelp@debian.org>  Fri, 28 Mar 2014 10:58:41 +0000

lava-server (0.22.1-4) unstable; urgency=medium

  * Add debconf support for migrating existing LAVA instances.

 -- Neil Williams <codehelp@debian.org>  Mon, 17 Mar 2014 15:26:39 +0000

lava-server (0.22.1-3) unstable; urgency=medium

  * Add libguestfs-tools for improved qemu support

 -- Neil Williams <codehelp@debian.org>  Mon, 10 Mar 2014 10:16:07 +0000

lava-server (0.22.1-2) unstable; urgency=medium

  * Add support for creating the devel database for unit tests

 -- Neil Williams <codehelp@debian.org>  Wed, 26 Feb 2014 11:04:55 +0000

lava-server (0.22.1-1) unstable; urgency=medium

  * Port to django1.6 

 -- Neil Williams <codehelp@debian.org>  Thu, 20 Feb 2014 10:45:58 +0000

lava-server (0.22-1) unstable; urgency=medium

  * Multicolumn search support

 -- Neil Williams <codehelp@debian.org>  Mon, 10 Feb 2014 10:41:46 +0000

lava-server (0.21.2-2) unstable; urgency=medium
